--- a/test/go-rpi-spi-hello/makefile
+++ b/test/go-rpi-spi-hello/makefile
@@ -1,11 +1,11 @@
 rpi:
-	go build hello.go
+	go build basic.go
 
-hello:
+basic:
 	GOOS=linux GOARCH=arm GOARM=7 \
-	go build hello.go
+	go build basic.go
 	
 test:
-	scp hello loragw.local://home/jakobsen/
-	ssh loragw.local ./hello 
+	scp basic loragw.local://home/jakobsen/
+	ssh loragw.local "sudo -S ./basic" 
 	 
